Further refinements, still not working.

--- a/corona_sim.ipynb
+++ b/corona_sim.ipynb
@@ -25,20 +25,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "Phew, didn't get infected!\nMoving on...\n"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from epidexus import EpidexusModel\n",
-    "\n",
-    "the_model = EpidexusModel()\n",
-    "the_model.step()"
+    "from epidexus import ItenaryEntry, Location\n",
+    "l = Location(\"Vesterkæret Skole\")\n",
+    "it_entry = ItenaryEntry(l, )"
    ]
   },
   {
