Add SEIR reporting

--- a/corona_sim.ipynb
+++ b/corona_sim.ipynb
@@ -36,10 +36,12 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "2020-04-01 00:15:00\n2020-04-01 00:30:00\n2020-04-01 00:45:00\n2020-04-01 01:00:00\n2020-04-01 01:15:00\n2020-04-01 01:30:00\n2020-04-01 01:45:00\n2020-04-01 02:00:00\n2020-04-01 02:15:00\n2020-04-01 02:30:00\n2020-04-01 02:45:00\n2020-04-01 03:00:00\n2020-04-01 03:15:00\n2020-04-01 03:30:00\n2020-04-01 03:45:00\n2020-04-01 04:00:00\n2020-04-01 04:15:00\n2020-04-01 04:30:00\n2020-04-01 04:45:00\n2020-04-01 05:00:00\n2020-04-01 05:15:00\n2020-04-01 05:30:00\n2020-04-01 05:45:00\n2020-04-01 06:00:00\n2020-04-01 06:15:00\n2020-04-01 06:30:00\n2020-04-01 06:45:00\n2020-04-01 07:00:00\n2020-04-01 07:15:00\n2020-04-01 07:30:00\n2020-04-01 07:45:00\n2020-04-01 08:00:00\nAgent-0@Home-0 going to Væsterkæret Skole\nAgent-1@Home-1 going to Væsterkæret Skole\n2020-04-01 08:15:00\n1 got exposed.\n2020-04-01 08:30:00\n2020-04-01 08:45:00\n2020-04-01 09:00:00\n2020-04-01 09:15:00\n2020-04-01 09:30:00\n2020-04-01 09:45:00\n2020-04-01 10:00:00\n2020-04-01 10:15:00\n2020-04-01 10:30:00\n2020-04-01 10:45:00\n2020-04-01 11:00:00\n2020-04-01 11:15:00\n2020-04-01 11:30:00\n2020-04-01 11:45:00\n2020-04-01 12:00:00\n2020-04-01 12:15:00\n2020-04-01 12:30:00\n2020-04-01 12:45:00\n2020-04-01 13:00:00\nAgent-0@Væsterkæret Skole going to Home-0\nAgent-1@Væsterkæret Skole going to Home-1\n2020-04-01 13:15:00\n2020-04-01 13:30:00\n2020-04-01 13:45:00\n2020-04-01 14:00:00\n2020-04-01 14:15:00\n2020-04-01 14:30:00\n2020-04-01 14:45:00\n2020-04-01 15:00:00\n2020-04-01 15:15:00\n2020-04-01 15:30:00\n2020-04-01 15:45:00\n2020-04-01 16:00:00\n2020-04-01 16:15:00\n2020-04-01 16:30:00\n2020-04-01 16:45:00\n2020-04-01 17:00:00\n2020-04-01 17:15:00\n2020-04-01 17:30:00\n2020-04-01 17:45:00\n2020-04-01 18:00:00\n2020-04-01 18:15:00\n2020-04-01 18:30:00\n2020-04-01 18:45:00\n2020-04-01 19:00:00\n2020-04-01 19:15:00\n2020-04-01 19:30:00\n2020-04-01 19:45:00\n2020-04-01 20:00:00\n2020-04-01 20:15:00\n2020-04-01 20:30:00\n2020-04-01 20:45:00\n2020-04-01 21:00:00\n2020-04-01 21:15:00\n2020-04-01 21:30:00\n2020-04-01 21:45:00\n2020-04-01 22:00:00\n2020-04-01 22:15:00\n2020-04-01 22:30:00\n2020-04-01 22:45:00\n2020-04-01 23:00:00\n2020-04-01 23:15:00\n2020-04-01 23:30:00\n2020-04-01 23:45:00\n2020-04-02 00:00:00\n2020-04-02 00:15:00\n2020-04-02 00:30:00\n2020-04-02 00:45:00\n2020-04-02 01:00:00\n"
+     "text": "Agent-0@Home-0 going to Væsterkæret Skole\nAgent-1@Home-1 going to Væsterkæret Skole\n1 got exposed.\nAgent-0@Væsterkæret Skole going to Home-0\nAgent-1@Væsterkæret Skole going to Home-1\nAgent-0@Home-0 going to Væsterkæret Skole\nAgent-1@Home-1 going to Væsterkæret Skole\nAgent-0@Væsterkæret Skole going to Home-0\nAgent-1@Væsterkæret Skole going to Home-1\nAgent-0@Home-0 going to Væsterkæret Skole\nAgent-1@Home-1 going to Væsterkæret Skole\nAgent-0@Væsterkæret Skole going to Home-0\nAgent-1@Væsterkæret Skole going to Home-1\nAgent-0@Home-0 going to Væsterkæret Skole\nAgent-1@Home-1 going to Væsterkæret Skole\nAgent-0@Væsterkæret Skole going to Home-0\nAgent-1@Væsterkæret Skole going to Home-1\n"
     }
    ],
    "source": [
+    "%matplotlib inline\n",
+    "import matplotlib.pyplot as plt\n",
     "from epidexus import ItineraryEntry, Location, EpidexusModel, Person, SEIR\n",
     "from datetime import datetime, timedelta\n",
     "\n",
@@ -72,10 +74,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "   S  E  I  R\n0  0  1  1  0\n1  0  1  1  0\n2  0  1  1  0\n3  0  1  1  0",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>S</th>\n      <th>E</th>\n      <th>I</th>\n      <th>R</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>1</td>\n      <td>1</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0</td>\n      <td>1</td>\n      <td>1</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0</td>\n      <td>1</td>\n      <td>1</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0</td>\n      <td>1</td>\n      <td>1</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 2
+    }
+   ],
+   "source": [
+    "seir = sim_model.datacollector.get_model_vars_dataframe()\n",
+    "seir.plot()\n"
+   ]
   }
  ]
 }
