Reorganize in folder structure

--- a/corona_sim.ipynb
+++ b/corona_sim.ipynb
@@ -19,7 +19,7 @@
     "# Generate a school with 30 kids and parents\n",
     "import matplotlib.pyplot as plt\n",
     "from epidexus import Location, EpidexusModel, Person, SEIR\n",
-    "from itinerary_entries import FixedWeekItineraryEntry\n",
+    "from epidexus.itinerary_entries import FixedWeekItineraryEntry\n",
     "from datetime import datetime, time, timedelta\n",
     "\n",
     "start_date = datetime(year=2020, month=3, day=29)\n",
@@ -66,8 +66,8 @@
     "from datetime import datetime, timedelta, time\n",
     "import matplotlib.pyplot as plt\n",
     "from epidexus import EpidexusModel, Location, SEIR\n",
-    "from itinerary_entries import FixedWeekItineraryEntry\n",
-    "from world_creators import create_family, create_family_prob, claim_by_age\n",
+    "from epidexus.itinerary_entries import FixedWeekItineraryEntry\n",
+    "from epidexus.world_creation import create_family, create_family_prob, claim_by_age\n",
     "\n",
     "start_date = datetime(year=2020, month=3, day=29)\n",
     "sim_model = EpidexusModel(start_date, timedelta(hours=1))\n",
