Drastically optimize the infection evaluation
Bases the evaluation on iteration through locations not persons as
before. Speedup of more than x3!

--- a/corona_sim.ipynb
+++ b/corona_sim.ipynb
@@ -25,7 +25,8 @@
     "start_date = datetime(year=2020, month=3, day=29)\n",
     "sim_model = EpidexusModel(start_date, sim_time_step=timedelta(hours=1))\n",
     "\n",
-    "vks = Location(name=\"Væsterkæret Skole\", infection_probability=0.01)\n",
+    "vks = Location(sim_model, name=\"Væsterkæret Skole\", infection_probability=0.01)\n",
+    "sim_model.add_location(vks)\n",
     "\n",
     "vks_it = FixedWeekItineraryEntry(vks, start_date.date(), monday=(time(8),time(14)),\n",
     "                                                         tuesday=(time(8),time(14)),\n",
@@ -34,18 +35,19 @@
     "                                                         friday=(time(8),time(14)))\n",
     "\n",
     "for i in range(30):\n",
-    "    hl = Location(\"Home-\" + str(i), infection_probability=0.05)\n",
-    "    school_kid = Person(sim_model.next_id(), sim_model, hl)\n",
+    "    hl = Location(sim_model, \"Home-\" + str(i), infection_probability=0.05)\n",
+    "    sim_model.add_location(hl)\n",
+    "    school_kid = Person(sim_model, hl)\n",
     "    school_kid.itinerary.add_entry(vks_it)\n",
-    "    parent1 = Person(sim_model.next_id(), sim_model, hl)\n",
-    "    parent2 = Person(sim_model.next_id(), sim_model, hl)\n",
+    "    parent1 = Person(sim_model, hl)\n",
+    "    parent2 = Person(sim_model, hl)\n",
     "    sim_model.add_person(school_kid)\n",
     "    sim_model.add_person(parent1)\n",
     "    sim_model.add_person(parent2)\n",
     "\n",
-    "# Hacking agent 0 to be infectious\n",
-    "sim_model.schedule.agents[0].infect()\n",
-    "sim_model.schedule.agents[0].infection_state.seir = SEIR.INFECTED\n",
+    "# Hacking last agent to be infectious\n",
+    "sim_model.schedule.agents[-1].infect()\n",
+    "sim_model.schedule.agents[-1].infection_state.seir = SEIR.INFECTED\n",
     "\n",
     "for i in range(800):\n",
     "    sim_model.step()\n",
@@ -72,25 +74,24 @@
     "start_date = datetime(year=2020, month=3, day=29)\n",
     "sim_model = EpidexusModel(start_date, timedelta(hours=1))\n",
     "unemployed_people = []\n",
-    "locations = []\n",
     "for i in range(50):\n",
     "    up, home = create_family_prob(sim_model, 1.5, 0.5, 40, 10, 2.5, 1, 8, 5)\n",
     "    unemployed_people += up\n",
-    "    locations.append(home)\n",
+    "    sim_model.add_location(home)\n",
     "\n",
     "#School\n",
-    "vks = Location(name=\"School\", infection_probability=0.2)\n",
-    "locations.append(vks)\n",
-    "vks_it = FixedWeekItineraryEntry(vks, start_date.date(), monday=(time(8),time(14)),\n",
+    "sch = Location(sim_model, name=\"School\", infection_probability=0.2)\n",
+    "sim_model.add_location(sch)\n",
+    "sch_it = FixedWeekItineraryEntry(sch, start_date.date(), monday=(time(8),time(14)),\n",
     "                                                         tuesday=(time(8),time(14)),\n",
     "                                                         wednesday=(time(8),time(14)),\n",
     "                                                         thursday=(time(8),time(14)),\n",
     "                                                         friday=(time(8),time(14)))\n",
-    "unemployed_people = claim_by_age(unemployed_people, vks_it, 6, 16, max_num=100);\n",
+    "unemployed_people = claim_by_age(unemployed_people, sch_it, 6, 16, max_num=100);\n",
     "\n",
     "#Kindergarten\n",
-    "kg = Location(name=\"Kindergarten\", infection_probability=0.5)\n",
-    "locations.append(kg)\n",
+    "kg = Location(sim_model, name=\"Kindergarten\", infection_probability=0.5)\n",
+    "sim_model.add_location(kg)\n",
     "kg_it = FixedWeekItineraryEntry(kg, start_date.date(), monday=(time(8),time(16)),\n",
     "                                                         tuesday=(time(8),time(16)),\n",
     "                                                         wednesday=(time(8),time(16)),\n",
@@ -100,8 +101,8 @@
     "\n",
     "#Workplaces\n",
     "for i in range(3):\n",
-    "    wp = Location(name=\"Workplace \" + str(i), infection_probability=0.05)\n",
-    "    locations.append(wp)\n",
+    "    wp = Location(sim_model, name=\"Workplace \" + str(i), infection_probability=0.05)\n",
+    "    sim_model.add_location(wp)\n",
     "    wp_it = FixedWeekItineraryEntry(wp, start_date.date(), monday=(time(8),time(15)),\n",
     "                                                            tuesday=(time(8),time(15)),\n",
     "                                                            wednesday=(time(8),time(15)),\n",
@@ -117,9 +118,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Hacking agent 0 to be infectious\n",
-    "sim_model.schedule.agents[0].infect()\n",
-    "sim_model.schedule.agents[0].infection_state.seir = SEIR.INFECTED\n",
+    "# Hacking person 0 to be infectious\n",
+    "sim_model.persons[0].infect()\n",
+    "sim_model.persons[0].infection_state.seir = SEIR.INFECTED\n",
     "\n",
     "for i in range(800):\n",
     "    sim_model.step()\n",
